--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,20 +22,20 @@ jobs:
       - name: Terraform Init
         id: init
         run: terraform init
-        working-directory: ./terraform-vpc
+        working-directory: ../terraform-vpc
       - name: Terraform Validate
         id: validate
         run: terraform validate
-        working-directory: ./terraform-vpc
+        working-directory: ../terraform-vpc
       - name: Terraform Plan
         id: plan
         run: terraform plan
-        working-directory: ./terraform-vpc
+        working-directory: ../terraform-vpc
       - name: Terraform Apply
         id: apply
         run: terraform apply --auto-approve
-        working-directory: ./terraform-vpc
+        working-directory: ../terraform-vpc
       - name: Terraform Destroy
         id: destroy
         run: terraform destroy --auto-approve
-        working-directory: ./terraform-vpc  
+        working-directory: ../terraform-vpc  
