--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,48 @@
-name: Terraform CI CD pipeline for Deploy AWS resources
-run-name: ${{github.actor}} has trigger the pipeline
+# name: Terraform CI CD pipeline for Deploy AWS resources
+# run-name: ${{github.actor}} has trigger the pipeline
 
-on: 
-  push:
-    branches:
-      - 'main'
+# on: 
+#   push:
+#     branches:
+#       - 'main'
 
-# env:
-#   AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-#   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+# # env:
+# #   AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+# #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       
 
-jobs:
-  build-infra:
-    name: terraform-ci-cd
-    runs-on: ubuntu-latest
-    steps:
-      - name: Export AWS Credentials
-        run: |
-          export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }}
-          export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          export AWS_REGION=us-east-1
+# jobs:
+#   build-infra:
+#     name: terraform-ci-cd
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Export AWS Credentials
+#         run: |
+#           export AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY }}
+#           export AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           export AWS_REGION=us-east-1
 
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set Up Terraform
-        uses: hashicorp/setup-terraform@v2
-      - name: Terraform Init
-        id: init
-        run: terraform init
-        working-directory: ./terraform-vpc
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate
-        working-directory: ./terraform-vpc
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan
-        working-directory: ./terraform-vpc
-      - name: Terraform Apply
-        id: apply
-        run: terraform apply --auto-approve
-        working-directory: ./terraform-vpc
-      - name: Terraform Destroy
-        id: destroy
-        run: terraform destroy --auto-approve
-        working-directory: ./terraform-vpc  
+#       - name: Checkout
+#         uses: actions/checkout@v2
+#       - name: Set Up Terraform
+#         uses: hashicorp/setup-terraform@v2
+#       - name: Terraform Init
+#         id: init
+#         run: terraform init
+#         working-directory: ./terraform-vpc
+#       - name: Terraform Validate
+#         id: validate
+#         run: terraform validate
+#         working-directory: ./terraform-vpc
+#       - name: Terraform Plan
+#         id: plan
+#         run: terraform plan
+#         working-directory: ./terraform-vpc
+#       - name: Terraform Apply
+#         id: apply
+#         run: terraform apply --auto-approve
+#         working-directory: ./terraform-vpc
+#       - name: Terraform Destroy
+#         id: destroy
+#         run: terraform destroy --auto-approve
+#         working-directory: ./terraform-vpc  
